fix preloader overflow, header adaptation & kesh

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" style="overflow: hidden;">
   <head>
     <meta charset="UTF-8" />    
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -59,7 +59,7 @@
         </nav>
         <div class="header__icon">
           <a class="header__icon--link" href="tel:+375291371010">
-            <ruby> +375 (29) 137 10 10 <rt>Оформить&ensp;доставку</rt></ruby>
+            <ruby> +375 (29) 137 10 10 <rt>навынос&ensp;и&ensp;доставка</rt></ruby>
           </a>
           <a class="header__icon--inst" href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D" target="_blank"><img src="./img/insta.png" alt="instagram"></a>
         </div>
@@ -904,12 +904,12 @@
             <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
-            <h3 class="item__text">Зеленный</h3>
+            <h3 class="item__text">Зеленый</h3>
             <span class="item__gramm">500</span>
             <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
-            <h3 class="item__text">Зеленный с мятой</h3>
+            <h3 class="item__text">Зеленый с мятой</h3>
             <span class="item__gramm">500</span>
             <span class="item__cost">3,5</span>
           </div>
