--- a/pages/delivery.html
+++ b/pages/delivery.html
@@ -16,16 +16,10 @@
     />
     <link href="../css/main.css" rel="stylesheet" />
     <link rel="shortcut icon" href="../img/logo__little.png" type="image/png" />
-    <meta
-      property="og:title"
-      content="Доставка от кафе Caprese"
-    />
+    <meta property="og:title" content="Доставка от кафе Caprese" />
     <meta property="og:type" content="article" />
     <meta property="og:image" content="../img/logo.png" />
-    <meta
-      property="og:description"
-      content="Условия и карта зоны доставки"
-    />
+    <meta property="og:description" content="Условия и карта зоны доставки" />
     <title>Доставка</title>
   </head>
   <body>
@@ -33,36 +27,55 @@
     <section class="header">
       <div class="container">
         <nav class="nav--list list">
-          <li class="list__link"><a href="../index.html#pizza">
-            <i class="fa-solid fa-pizza-slice"></i>
-            Пиццы</a>
+          <li class="list__link">
+            <a href="../index.html#pizza">
+              <i class="fa-solid fa-pizza-slice"></i>
+              Пиццы</a
+            >
           </li>
-          <li class="list__link"><a href="../index.html#burger">
-            <i class="fa-solid fa-burger"></i>               
-            Бургеры</a>
+          <li class="list__link">
+            <a href="../index.html#burger">
+              <i class="fa-solid fa-burger"></i>
+              Бургеры</a
+            >
           </li>
-          <li class="list__link"><a href="./lunch.html">
-            <i class="fa-solid fa-plate-wheat"></i>
-            Обеды</a>
+          <li class="list__link">
+            <a href="./lunch.html">
+              <i class="fa-solid fa-plate-wheat"></i>
+              Обеды</a
+            >
           </li>
-          <li class="list__link"><a href="./kitchen.html"> 
-            <i class="fa fa-solid fa-utensils"></i>       
-            Кухня</a>
-          </li>         
-          <li class="list__link"><a href="./party.html"> 
-            <i class="fa-solid fa-champagne-glasses"></i>       
-            Банкеты</a>
+          <li class="list__link">
+            <a href="./kitchen.html">
+              <i class="fa fa-solid fa-utensils"></i>
+              Кухня</a
+            >
           </li>
-          <li class="list__link"><a href="./delivery.html"> 
-            <i class="fa-solid fa-map-location-dot"></i>       
-            Доставка</a>
+          <li class="list__link">
+            <a href="./party.html">
+              <i class="fa-solid fa-champagne-glasses"></i>
+              Банкеты</a
+            >
+          </li>
+          <li class="list__link">
+            <a href="./delivery.html">
+              <i class="fa-solid fa-map-location-dot"></i>
+              Доставка</a
+            >
           </li>
         </nav>
         <div class="header__icon">
           <a class="header__icon--link" href="tel:+375291371010">
-            <ruby> +375 (29) 137 10 10 <rt>Оформить&ensp;доставку</rt></ruby>
+            <ruby>
+              +375 (29) 137 10 10 <rt>навынос&ensp;и&ensp;доставка</rt></ruby
+            >
           </a>
-          <a class="header__icon--inst" href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D" target="_blank"><img src="../img/insta.png" alt="instagram"></a>
+          <a
+            class="header__icon--inst"
+            href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D"
+            target="_blank"
+            ><img src="../img/insta.png" alt="instagram"
+          /></a>
         </div>
       </div>
     </section>
@@ -73,52 +86,91 @@
           <div class="category">
             <hr class="category__line" />
             <h1 class="category__title">
-              <i class="fa-solid fa-motorcycle"></i> 
-              Доставка</h1>
+              <i class="fa-solid fa-motorcycle"></i>
+              Доставка
+            </h1>
             <hr class="category__line" />
           </div>
           <ul class="description__list">
             <li>Доставка при заказе от 30 руб. <span>БЕСПЛАТНА</span>!</li>
             <li>При заказе до 30 руб. &ndash; <span>5 руб</span>.</li>
-            <li>Оформить доставку: <a  href="tel:+375291371010">+375 (29) 137 10 10</a></li>
-          </ul>                    
+            <li>
+              Оформить доставку:
+              <a href="tel:+375291371010">+375 (29) 137 10 10</a>
+            </li>
+          </ul>
           <ul class="description__timetable">
             <li>Время доставки:</li>
             <li>ПН - ЧТ: <span>12.00-21.00</span></li>
             <li>ПТ - СБ: <span>12.00-22.00</span></li>
-            <li>ВС:      <span>12.00-19.00</span></li>
+            <li>ВС: <span>12.00-19.00</span></li>
           </ul>
           <a class="description--btn" href="tel:+375291371010">
             Заказать доставку
           </a>
         </div>
-        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Adecad88acad158235a585c8b4e43860f90a153028068cb0f167bfec5520f26d6&amp;source=constructor" frameborder="0"></iframe>
+        <iframe
+          src="https://yandex.ru/map-widget/v1/?um=constructor%3Adecad88acad158235a585c8b4e43860f90a153028068cb0f167bfec5520f26d6&amp;source=constructor"
+          frameborder="0"
+        ></iframe>
         <div class="delivery__terms">
           <div class="container">
-          <ul>            
-            <h3>Условия доставки</h3>
-            <li>Расчет производится согласно актуальным ценам.</li>
-            <li>Оплата осуществляется наличными курьеру при получении заказа, также возможна оплата банковской картой, для этого необходимо <span>предупредить оператора при формировании заказа</span>.</li>
-            <li>К оплате принимаются только белорусские рубли.</li>
-          </ul>          
-          <ul>
-            <h3>Отмена и возврат</h3>
-            <li>Принятые заказы <span>не подлежат отмене</span> и редактированию.</li>
-            <li>Готовая продукция возврату не подлежит.</li>
-            <li>Некачественная продукция может быть заменена по согласованию, по номеру <span>+375 (29) 137 10 10</span> при наличии фото и документа подтверждающего оплату.</li>
-          </ul></div>
+            <ul>
+              <h3>Условия доставки</h3>
+              <li>Расчет производится согласно актуальным ценам.</li>
+              <li>
+                Оплата осуществляется наличными курьеру при получении заказа,
+                также возможна оплата банковской картой, для этого необходимо
+                <span>предупредить оператора при формировании заказа</span>.
+              </li>
+              <li>К оплате принимаются только белорусские рубли.</li>
+            </ul>
+            <ul>
+              <h3>Отмена и возврат</h3>
+              <li>
+                Принятые заказы <span>не подлежат отмене</span> и
+                редактированию.
+              </li>
+              <li>Готовая продукция возврату не подлежит.</li>
+              <li>
+                Некачественная продукция может быть заменена по согласованию, по
+                номеру <span>+375 (29) 137 10 10</span> при наличии фото и
+                документа подтверждающего оплату.
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
     <!-- ! ................. FOOTER ..................... -->
     <footer>
       <div class="container">
-        <div style="position:relative;overflow:hidden;"><iframe src="https://yandex.by/map-widget/v1/-/CCUVqLtlDB"  allowfullscreen="true" style="position:relative;"></iframe></div>
+        <div style="position: relative; overflow: hidden">
+          <iframe
+            src="https://yandex.by/map-widget/v1/-/CCUVqLtlDB"
+            allowfullscreen="true"
+            style="position: relative"
+          ></iframe>
+        </div>
         <div class="aside">
           <ul>
-            <li><a href="tel:+375291371010"><i class="fa-solid fa-phone-volume"></i>+375 (29) 137 10 10</a></li>
-            <li><a href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
-            <li><a href="mailto:kotsuta@yandex.ru"><i class="fa-regular fa-envelope"></i>Mail</a></li>
+            <li>
+              <a href="tel:+375291371010"
+                ><i class="fa-solid fa-phone-volume"></i>+375 (29) 137 10 10</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D"
+                target="_blank"
+                ><i class="fa-brands fa-instagram"></i>Instagram</a
+              >
+            </li>
+            <li>
+              <a href="mailto:kotsuta@yandex.ru"
+                ><i class="fa-regular fa-envelope"></i>Mail</a
+              >
+            </li>
           </ul>
           <ul>
             <li>ПН - ЧТ: <span>12.00-22.00</span></li>
@@ -126,11 +178,18 @@
             <li>ВС: <span>12.00-20.00</span></li>
           </ul>
         </div>
-      </div>      
+      </div>
       <div class="signatyre">
         <p>Created by <a href="https://t.me/me_mosya">@Moiseev Arseny</a></p>
       </div>
     </footer>
+    <!-- ? ............... MODAL ............... -->
+    <div class="modal">
+      <div class="modal__content">
+        <div data-close class="modal__close">&times;</div>
+        <img src="../promo.png" alt="promo" />
+      </div>
+    </div>
     <script src="./js/scirpts.js"></script>
   </body>
 </html>
