--- a/pages/party.html
+++ b/pages/party.html
@@ -16,16 +16,10 @@
     />
     <link href="../css/main.css" rel="stylesheet" />
     <link rel="shortcut icon" href="../img/logo__little.png" type="image/png" />
-    <meta
-      property="og:title"
-      content="Мероприятия от кафе Caprese"
-    />
+    <meta property="og:title" content="Мероприятия от кафе Caprese" />
     <meta property="og:type" content="article" />
     <meta property="og:image" content="../img/logo.png" />
-    <meta
-      property="og:description"
-      content="Мероприятия в кафе Caprese"
-    />
+    <meta property="og:description" content="Мероприятия в кафе Caprese" />
     <title>Обеденное меню</title>
   </head>
   <body>
@@ -33,36 +27,55 @@
     <section class="header">
       <div class="container">
         <nav class="nav--list list">
-          <li class="list__link"><a href="../index.html#pizza">
-            <i class="fa-solid fa-pizza-slice"></i>
-            Пиццы</a>
+          <li class="list__link">
+            <a href="../index.html#pizza">
+              <i class="fa-solid fa-pizza-slice"></i>
+              Пиццы</a
+            >
           </li>
-          <li class="list__link"><a href="../index.html#burger">
-            <i class="fa-solid fa-burger"></i>               
-            Бургеры</a>
+          <li class="list__link">
+            <a href="../index.html#burger">
+              <i class="fa-solid fa-burger"></i>
+              Бургеры</a
+            >
           </li>
-          <li class="list__link"><a href="./lunch.html">
-            <i class="fa-solid fa-plate-wheat"></i>
-            Обеды</a>
+          <li class="list__link">
+            <a href="./lunch.html">
+              <i class="fa-solid fa-plate-wheat"></i>
+              Обеды</a
+            >
           </li>
-          <li class="list__link"><a href="./kitchen.html"> 
-            <i class="fa fa-solid fa-utensils"></i>       
-            Кухня</a>
-          </li>         
-          <li class="list__link"><a href="./party.html"> 
-            <i class="fa-solid fa-champagne-glasses"></i>       
-            Банкеты</a>
+          <li class="list__link">
+            <a href="./kitchen.html">
+              <i class="fa fa-solid fa-utensils"></i>
+              Кухня</a
+            >
           </li>
-          <li class="list__link"><a href="./delivery.html"> 
-            <i class="fa-solid fa-map-location-dot"></i>       
-            Доставка</a>
+          <li class="list__link">
+            <a href="./party.html">
+              <i class="fa-solid fa-champagne-glasses"></i>
+              Банкеты</a
+            >
+          </li>
+          <li class="list__link">
+            <a href="./delivery.html">
+              <i class="fa-solid fa-map-location-dot"></i>
+              Доставка</a
+            >
           </li>
         </nav>
         <div class="header__icon">
           <a class="header__icon--link" href="tel:+375291371010">
-            <ruby> +375 (29) 137 10 10 <rt>Оформить&ensp;доставку</rt></ruby>
+            <ruby>
+              +375 (29) 137 10 10 <rt>навынос&ensp;и&ensp;доставка</rt></ruby
+            >
           </a>
-          <a class="header__icon--inst" href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D" target="_blank"><img src="../img/insta.png" alt="instagram"></a>
+          <a
+            class="header__icon--inst"
+            href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D"
+            target="_blank"
+            ><img src="../img/insta.png" alt="instagram"
+          /></a>
         </div>
       </div>
     </section>
@@ -73,8 +86,9 @@
           <div class="category">
             <hr class="category__line" />
             <h1 class="category__title">
-              <i class="fa-solid fa-champagne-glasses"></i> 
-              Мероприятия</h1>
+              <i class="fa-solid fa-champagne-glasses"></i>
+              Мероприятия
+            </h1>
             <hr class="category__line" />
           </div>
           <ul>
@@ -84,23 +98,43 @@
             <li>индивидуальный подход</li>
             <li>Wi-Fi</li>
             <li>мультимедиа</li>
-          </ul>          
+          </ul>
           <a class="delivery__description--btn" href="tel:+375291371010">
             Оформить мероприятие
           </a>
         </div>
-        <img src="../img/party.JPG" alt="">
+        <img src="../img/party.JPG" alt="" />
       </div>
     </section>
     <!-- ! ................. FOOTER ..................... -->
     <footer>
       <div class="container">
-        <div style="position:relative;overflow:hidden;"><iframe src="https://yandex.by/map-widget/v1/-/CCUVqLtlDB"  allowfullscreen="true" style="position:relative;"></iframe></div>
+        <div style="position: relative; overflow: hidden">
+          <iframe
+            src="https://yandex.by/map-widget/v1/-/CCUVqLtlDB"
+            allowfullscreen="true"
+            style="position: relative"
+          ></iframe>
+        </div>
         <div class="aside">
           <ul>
-            <li><a href="tel:+375291371010"><i class="fa-solid fa-phone-volume"></i>+375 (29) 137 10 10</a></li>
-            <li><a href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
-            <li><a href="mailto:kotsuta@yandex.ru"><i class="fa-regular fa-envelope"></i>Mail</a></li>
+            <li>
+              <a href="tel:+375291371010"
+                ><i class="fa-solid fa-phone-volume"></i>+375 (29) 137 10 10</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D"
+                target="_blank"
+                ><i class="fa-brands fa-instagram"></i>Instagram</a
+              >
+            </li>
+            <li>
+              <a href="mailto:kotsuta@yandex.ru"
+                ><i class="fa-regular fa-envelope"></i>Mail</a
+              >
+            </li>
           </ul>
           <ul>
             <li>ПН - ЧТ: <span>12.00-22.00</span></li>
@@ -108,7 +142,7 @@
             <li>ВС: <span>12.00-20.00</span></li>
           </ul>
         </div>
-      </div>      
+      </div>
       <div class="signatyre">
         <p>Created by <a href="https://t.me/me_mosya">@Moiseev Arseny</a></p>
       </div>
