fix little things

--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="UTF-8" />    
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
+    <link rel="preload" href="./img/preloader.png" as="image" />
+    <link rel="preload" href="./css/preloader.css" as="style" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />    
-    <link rel="prefetch" href="./img/preloader.png" as="image" />
-    <link rel="prefetch" href="./css/preloader.css" as="style" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />  
     <script src="https://kit.fontawesome.com/471bab524d.js" crossorigin="anonymous"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
     <link href="./css/main.css" rel="stylesheet" />
-    <link rel="shortcut icon" href="./img/logo__little.png" type="image/png" />    
+    <link rel="shortcut icon" href="./img/logo__little.png" type="image/png" />  
+
     <meta property = "og:title" content = "Кафе-бар в Колодищах. Пицца, обеды с доставкой. Организация праздничных мероприятий ">
     <meta property = "og:type" content = "article">
     <meta property = "og:image" content = "./img/logo.png">
     <meta property = "og:description" content = "Кафе-бар Капрезе в Колодищах. Пицца, обеды с доставкой. Организация праздничных мероприятий">
+    <meta name="description" content="Кафе-бар Капрезе в Колодищах. Пицца, обеды с доставкой. Организация праздничных мероприятий">
     <title>Кафе Caprese</title>
   </head>
   <body>
