--- a/pages/lunch.html
+++ b/pages/lunch.html
@@ -97,92 +97,92 @@
           <h2 class="lunch__wrapper--title">Салаты</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Цветной</h3>
-              <p class="item__text--info">
-                Свекла св., капуста б/к, морковь св., соус из зелени
-              </p>
+              <h3 class="item__text__name">Салат со свеклой и чесноком</h3>
+              <p class="item__text--info">Свекла, чеснок, майонез, зелень</p>
             </div>
             <span class="item__gramm">150 </span>
-            <span class="item__cost">3,5 </span>
+            <span class="item__cost">3,0 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Мясной с фасолью</h3>
+              <h3 class="item__text__name">Оливье по-домашнему</h3>
               <p class="item__text--info">
-                Фасоль отварная, ветчина, морковь, лук репчатый, огурец
-                маринованный, майонез
+                Ветчина,картофель, морковь, горошек, огурец консервированный,
+                майонез, зелень
               </p>
             </div>
-            <span class="item__gramm">155 </span>
-            <span class="item__cost">3,7 </span>
+            <span class="item__gramm">150 </span>
+            <span class="item__cost">3,8 </span>
           </div>
           <!--  ? ..........СУПЫ.......... -->
           <h2 class="lunch__wrapper--title">Супы</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Харчо</h3>
+              <h3 class="item__text__name">Борщ с мякотью цыпленка</h3>
               <p class="item__text--info">
                 <!--  -->
               </p>
             </div>
-            <span class="item__gramm">250 </span>
+            <span class="item__gramm">270 </span>
             <span class="item__cost">4,0 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Суп-крем из шампиньонов</h3>
+              <h3 class="item__text__name">Щи из свежей капусты</h3>
               <p class="item__text--info">
                 <!--  -->
               </p>
             </div>
             <span class="item__gramm">250 </span>
-            <span class="item__cost">4,0 </span>
+            <span class="item__cost">3,4 </span>
           </div>
           <!-- ? ...........ГОРЯЧИЕ БЛЮДА.......... -->
           <h2 class="lunch__wrapper--title">Горячие блюда</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">
-                Говядина с овощами в горчичном соусе
-              </h3>
-              <p class="item__text--info">
-                <!--  -->
-              </p>
-            </div>
-            <span class="item__gramm">180 </span>
-            <span class="item__cost">7,0 </span>
-          </div>
-          <div class="lanch__wrapper--item item">
-            <div class="item__text">
-              <h3 class="item__text__name">Свинина по-домашнему</h3>
+              <h3 class="item__text__name">Филе птицы в хрустящей корочке</h3>
               <p class="item__text--info">
                 <!--  -->
               </p>
             </div>
             <span class="item__gramm">140 </span>
-            <span class="item__cost">6,3 </span>
+            <span class="item__cost">6,0 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Филе птицы в сыре</h3>
+              <h3 class="item__text__name">Поджарка из свинины с луком</h3>
               <p class="item__text--info">
                 <!--  -->
               </p>
             </div>
-            <span class="item__gramm">130 </span>
-            <span class="item__cost">6,2 </span>
+            <span class="item__gramm">135 </span>
+            <span class="item__cost">6,3 </span>
+          </div>
+          <div class="lanch__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">
+                Бифштекс рубленый из говядины с яйцом
+              </h3>
+              <p class="item__text--info">
+                <!--  -->
+              </p>
+            </div>
+            <span class="item__gramm">150 </span>
+            <span class="item__cost">7,0 </span>
           </div>
           <!-- ?  ...........БЛЮДО ДНЯ.......... -->
           <h2 class="lunch__wrapper--title">Блюдо дня</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Драник с мясом</h3>
+              <h3 class="item__text__name">
+                Картофельная запеканка с мясным фаршем под сырной корочкой
+              </h3>
               <p class="item__text--info">
                 <!--  -->
               </p>
             </div>
-            <span class="item__gramm">180 </span>
-            <span class="item__cost">5,9 </span>
+            <span class="item__gramm">230 </span>
+            <span class="item__cost">5,8 </span>
           </div>
           <!-- ?  ...........ГАРНИРЫ.......... -->
           <h2 class="lunch__wrapper--title">Гарниры</h2>
@@ -198,7 +198,7 @@
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Рис с куркумой</h3>
+              <h3 class="item__text__name">Гречка рассыпчатая</h3>
               <p class="item__text--info">
                 <!--  -->
               </p>
@@ -213,7 +213,6 @@
               <h3 class="item__text__name">
                 Сэндвичи с ветчиной, томатом и сыром/ горячие
               </h3>
-              <!-- <p class="item__text--info">Ветчина, томаты, сыр</p> -->
             </div>
             <span class="item__gramm">200 </span>
             <span class="item__cost">6,0 </span>
