--- a/index.html
+++ b/index.html
@@ -967,7 +967,7 @@
         </div>
     </div>
     <!-- ? ............. Ivents .............. -->    
-    <div data-modal class="ivent show">Акции</div>
+    <!-- <div data-modal class="ivent show">Акции</div> -->
     <!-- ? ............. Preloader ........... -->
     <div class="preloader show" id="preloader">
       <div class="preloader__content">
