--- a/pages/lunch.html
+++ b/pages/lunch.html
@@ -97,18 +97,20 @@
           <h2 class="lunch__wrapper--title">Салаты</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Салат со свеклой и чесноком</h3>
-              <p class="item__text--info">Свекла, чеснок, майонез, зелень</p>
+              <h3 class="item__text__name">Салат с морской капустой</h3>
+              <p class="item__text--info">
+                Капуста, морская капуста, яйцо, лук, майонез, зелень
+              </p>
             </div>
             <span class="item__gramm">150 </span>
             <span class="item__cost">3,0 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Оливье по-домашнему</h3>
+              <h3 class="item__text__name">Дружба</h3>
               <p class="item__text--info">
-                Ветчина,картофель, морковь, горошек, огурец консервированный,
-                майонез, зелень
+                Крабовые палочки, кукуруза, огурец свежий, капуста, майонез,
+                зелень
               </p>
             </div>
             <span class="item__gramm">150 </span>
@@ -118,71 +120,69 @@
           <h2 class="lunch__wrapper--title">Супы</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Борщ с мякотью цыпленка</h3>
+              <h3 class="item__text__name">Суп фасолевый с копченостями</h3>
+              <p class="item__text--info">
+                <!--  -->
+              </p>
+            </div>
+            <span class="item__gramm">280 </span>
+            <span class="item__cost">4,0 </span>
+          </div>
+          <div class="lanch__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Тыквенный суп пюре с крутонами</h3>
               <p class="item__text--info">
                 <!--  -->
               </p>
             </div>
             <span class="item__gramm">270 </span>
-            <span class="item__cost">4,0 </span>
-          </div>
-          <div class="lanch__wrapper--item item">
-            <div class="item__text">
-              <h3 class="item__text__name">Щи из свежей капусты</h3>
-              <p class="item__text--info">
-                <!--  -->
-              </p>
-            </div>
-            <span class="item__gramm">250 </span>
-            <span class="item__cost">3,4 </span>
+            <span class="item__cost">3,5 </span>
           </div>
           <!-- ? ...........ГОРЯЧИЕ БЛЮДА.......... -->
           <h2 class="lunch__wrapper--title">Горячие блюда</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Филе птицы в хрустящей корочке</h3>
-              <p class="item__text--info">
-                <!--  -->
-              </p>
-            </div>
-            <span class="item__gramm">140 </span>
-            <span class="item__cost">6,0 </span>
-          </div>
-          <div class="lanch__wrapper--item item">
-            <div class="item__text">
-              <h3 class="item__text__name">Поджарка из свинины с луком</h3>
-              <p class="item__text--info">
-                <!--  -->
-              </p>
+              <h3 class="item__text__name">
+                Говядина тушеная с черносливом с горшочке
+              </h3>
             </div>
             <span class="item__gramm">135 </span>
-            <span class="item__cost">6,3 </span>
+            <span class="item__cost">7,4 </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
               <h3 class="item__text__name">
-                Бифштекс рубленый из говядины с яйцом
+                Филе птицы с грибами под сырной корочкой
               </h3>
-              <p class="item__text--info">
-                <!--  -->
-              </p>
             </div>
-            <span class="item__gramm">150 </span>
-            <span class="item__cost">7,0 </span>
+            <span class="item__gramm">135 </span>
+            <span class="item__cost">6,5 </span>
+          </div>
+          <div class="lanch__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Котлета Нежность</h3>
+            </div>
+            <span class="item__gramm">125 </span>
+            <span class="item__cost">6,9 </span>
+          </div>
+          <div class="lanch__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Фаршированный перец со сметаной</h3>
+            </div>
+            <span class="item__gramm">240 </span>
+            <span class="item__cost">7,1 </span>
           </div>
           <!-- ?  ...........БЛЮДО ДНЯ.......... -->
           <h2 class="lunch__wrapper--title">Блюдо дня</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">
-                Картофельная запеканка с мясным фаршем под сырной корочкой
-              </h3>
+              <h3 class="item__text__name">Фаршированный перец со сметаной</h3>
               <p class="item__text--info">
                 <!--  -->
               </p>
             </div>
-            <span class="item__gramm">230 </span>
-            <span class="item__cost">5,8 </span>
+            <span class="item__gramm">120 </span>
+            <span class="item__cost">4,1 </span>
           </div>
           <!-- ?  ...........ГАРНИРЫ.......... -->
           <h2 class="lunch__wrapper--title">Гарниры</h2>
@@ -198,7 +198,7 @@
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Гречка рассыпчатая</h3>
+              <h3 class="item__text__name">Рис рассыпчатый с куркумой</h3>
               <p class="item__text--info">
                 <!--  -->
               </p>
@@ -481,8 +481,6 @@
     </div>
     <!-- ? ............. Events .............. -->
     <div data-modal class="ivent show">Акции</div>
-    <div id="preloader"></div>
-    <div class="main__logo"></div>
     <script src="../js/scirpts.js"></script>
   </body>
 </html>
