fix chrome mobaile bag

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" style="overflow: hidden">
+<html lang="ru" class="hidden">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -435,7 +435,7 @@
         <div class="pizza__box box">
           <div class="box__wrapper">
             <img
-              src="./img/sshulen.png"
+              src="./img/julienne.png"
               alt="pizza"
               class="box__wrapper--img"
             />
